--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,26 +11,14 @@ jobs:
     # You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # Be sure to update the Docker image tag below to openjdk version of your application.
     # A list of available CircleCI Docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/openjdk
-    docker:
-      - image: cimg/openjdk:11.0
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
-    steps:
-      # Checkout the code as the first step.
-      - checkout
-      # Use mvn clean and package as the standard maven build phase
-      - run:
-          name: Build
-          command: mvn -B -DskipTests clean package
-      # Then run your tests!
-      - run:
-          name: Test
-          command: mvn test
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
     jobs:
-      - build-and-test
+    build:
+    docker:
+      - image: khanimhuseynzada/circlecitest
+    steps:
+      - checkout
+      - run: mvn clean package
+      - run: mvn clean compile jib:build
+    -Djib.to.auth.username=$DOCKER_USER
+    -Djib.to.auth.password=$DOCKER_PASS
+    -Dimage=khanimhuseynzada/circlecitest:$CIRCLE_BUILD_NU
