--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,21 +4,14 @@ version: 2.1
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
-jobs:
-  # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
-  build-and-test:
-    # These next lines define a Docker executor: https://circleci.com/docs/2.0/executor-types/
-    # You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # Be sure to update the Docker image tag below to openjdk version of your application.
-    # A list of available CircleCI Docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/openjdk
     jobs:
     build:
     docker:
-      - image: khanimhuseynzada/circlecitest
+      - image: circleci/openjdk:11.0.1-jdk
     steps:
       - checkout
       - run: mvn clean package
       - run: mvn clean compile jib:build
     -Djib.to.auth.username=$DOCKER_USER
     -Djib.to.auth.password=$DOCKER_PASS
-    -Dimage=khanimhuseynzada/circlecitest:$CIRCLE_BUILD_NU
+    -Dimage=khanimhuseynzada/circlecitest:$CIRCLE_BUILD_NUM
