--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,11 @@
 version: 2
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
-    jobs:
-    build:
+jobs:
+  build:
     docker:
       - image: circleci/openjdk:11.0.1-jdk
     steps:
       - checkout
+      - run: mvn dependency:go-offline
       - run: mvn clean package
-      - run: mvn clean compile jib:build
-    -Djib.to.auth.username=$DOCKER_USER
-    -Djib.to.auth.password=$DOCKER_PASS
-    -Dimage=khanimhuseynzada/circlecitest:$CIRCLE_BUILD_NUM
+      - run: mvn clean compile jib:build -Djib.to.auth.username=$DOCKER_USER -Djib.to.auth.password=$DOCKER_PASS -Dimage=khanimhuseynzada/circlecitest:$CIRCLE_BUILD_NUM
